like button no longer cropped, height lowered in header and under description, duplicates remedied

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -28,7 +28,7 @@
 
 .card__like-button {
   background: transparent url(../images/like-active.svg) center no-repeat;
-  width: 25px;
+  width: 28px;
   height: 18px;
   border: none;
 }
