--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,7 +18,6 @@
   .footer__copyright {
     font-size: 14px;
     line-height: 16.94px;
-    text-align: left;
     color: #545454;
     margin-top: 0;
     margin-bottom: 0;
