--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  margin-top: 45px;
+  margin-top: 35px;
   max-width: 880px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   padding-bottom: 20px;
